app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: app
    spec:
      containers:
        - image: docker.io/daryltamo/task-management-app  # Updated image name and tag
          name: app
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /app/configs/.env
              name: app-cm0
              subPath: .env
            - mountPath: /app/logs
              name: logs
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: docker.env
                path: .env
            name: app-cm0
          name: app-cm0
        - name: logs
          persistentVolumeClaim:
            claimName: logs
