promtail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: promtail
  name: promtail
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: promtail
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: promtail
    spec:
      containers:
        - args:
            - -config.file=/etc/promtail/config.yml
          image: grafana/promtail:2.9.0
          name: promtail
          volumeMounts:
            - mountPath: /var/log
              name: logs
            - mountPath: /etc/promtail/config.yml
              name: promtail-cm1
              subPath: config.yml
      restartPolicy: Always
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs
        - configMap:
            items:
              - key: promtail.yml
                path: config.yml
            name: promtail-cm1
          name: promtail-cm1
